--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -7,6 +7,38 @@
 </div>
 
 <div class="row">
+    <div class="col-lg-1">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2 class="panel-title">Search for Recipes</h2>
+            </div>
+            <div class="panel-body">
+                <form>
+                    <label for="malts">Malts</label>
+                    <div class="form-group">
+                        
+                        <select id="malts" data-bind="options: malts, optionsText: 'malt', optionsValue : 'id'" size="10" multiple="true"></select>
+                    </div>
+                    <label for="hops">Hops</label>
+                    <div class="form-group">
+                       
+                        <select id="hops" data-bind="options: hops, optionsText: 'hops', optionsValue : 'id'" size="10" multiple="true"></select>
+                    </div>
+                    <label for="yeast">Yeast</label>
+                    <div class="form-group">
+                        <select id="yeast" data-bind="options: yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple="true"></select>
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" id="recipes">
     <!--comment-->
     <div class="col-md-4">
         <div class="panel panel-default">
