--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -14,20 +14,20 @@
                 <h2 class="panel-title">Search for Recipes</h2>
             </div>
             <div class="panel-body">
-                <form>
+                <form data-bind="submit: searchRecipes">
                     <label for="malts">Malts</label>
                     <div class="form-group">
                         
-                        <select id="malts" data-bind="options: malts, optionsText: 'malt', optionsValue : 'id'" size="10" multiple="true"></select>
+                        <select id="malts" data-bind="options: Malts.Malt, optionsText: 'malt', optionsValue : 'id'" size="10" multiple="true"></select>
                     </div>
                     <label for="hops">Hops</label>
                     <div class="form-group">
                        
-                        <select id="hops" data-bind="options: hops, optionsText: 'hops', optionsValue : 'id'" size="10" multiple="true"></select>
+                        <select id="hops" data-bind="options: Hops.Hop, optionsText: 'hops', optionsValue : 'id'" size="10" multiple="true"></select>
                     </div>
                     <label for="yeast">Yeast</label>
                     <div class="form-group">
-                        <select id="yeast" data-bind="options: yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple="true"></select>
+                        <select id="yeast" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple="true"></select>
                     </div>
 
                     <button type="submit" class="btn btn-default">Submit</button>
@@ -46,10 +46,10 @@
                 <h2 class="panel-title">Recipes</h2>
             </div>
             <div class="panel-body">
-                <ul class="list-unstyled" data-bind="foreach: recipes">
+                <ul class="list-unstyled" data-bind="foreach: Recipes.Recipe">
                     <li>
                         <strong><span data-bind="text: name"></span></strong>: <span data-bind="text: abv"></span>%
-                        <small><a href="#" data-bind="click: $parent.getRecipeDetail">Details</a></small>
+                        <small><a href="#" data-bind="click: $parent.Recipes.getRecipeDetail">Details</a></small>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
         <div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>
     </div>
 
-    <!-- ko if:detail() -->
+    <!-- ko if:Recipes.detail() -->
 
     <div class="col-md-4">
         <div class="panel panel-default">
@@ -65,19 +65,19 @@
                 <h2 class="panel-title">Detail</h2>
             </div>
             <table class="table">
-                <tr><td>source2</td><td data-bind="text: detail().source2"></td></tr>
-                <tr><td>number</td><td data-bind="text: detail().number"></td></tr>
-                <tr><td>name</td><td data-bind="text: detail().name"></td></tr>
-                <tr><td>yeastName</td><td data-bind="text: detail().yeastName"></td></tr>
-                <tr><td>abv</td><td data-bind="text: detail().abv"></td></tr>
-                <tr><td>ibu</td><td data-bind="text: detail().ibu"></td></tr>
-                <tr><td>og</td><td data-bind="text: detail().og"></td></tr>
-                <tr><td>fg</td><td data-bind="text: detail().fg"></td></tr>
-                <tr><td>ebc</td><td data-bind="text: detail().ebc"></td></tr>
-                <tr><td>hasAdjucts</td><td data-bind="text: detail().hasAdjucts"></td></tr>
-                <tr><td>mashTemp</td><td data-bind="text: detail().mashTemp"></td></tr>
-                <tr><td>mashTime</td><td data-bind="text: detail().mashTime"></td></tr>
-                <tr><td>fermentation</td><td data-bind="text: detail().fermentation"></td></tr>
+                <tr><td>source2</td><td data-bind="text: Recipes.detail().source2"></td></tr>
+                <tr><td>number</td><td data-bind="text: Recipes.detail().number"></td></tr>
+                <tr><td>name</td><td data-bind="text: Recipes.detail().name"></td></tr>
+                <tr><td>yeastName</td><td data-bind="text: Recipes.detail().yeastName"></td></tr>
+                <tr><td>abv</td><td data-bind="text: Recipes.detail().abv"></td></tr>
+                <tr><td>ibu</td><td data-bind="text: Recipes.detail().ibu"></td></tr>
+                <tr><td>og</td><td data-bind="text: Recipes.detail().og"></td></tr>
+                <tr><td>fg</td><td data-bind="text: Recipes.detail().fg"></td></tr>
+                <tr><td>ebc</td><td data-bind="text: Recipes.detail().ebc"></td></tr>
+                <tr><td>hasAdjucts</td><td data-bind="text: Recipes.detail().hasAdjucts"></td></tr>
+                <tr><td>mashTemp</td><td data-bind="text: Recipes.detail().mashTemp"></td></tr>
+                <tr><td>mashTime</td><td data-bind="text: Recipes.detail().mashTime"></td></tr>
+                <tr><td>fermentation</td><td data-bind="text: Recipes.detail().fermentation"></td></tr>
             </table>
         </div>
     </div>
