--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -7,57 +7,110 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-1">
+    <div class="col-lg-12">
+        <div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>
+        <div class="panel-group" id="recipesApp" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="searchPanelHeading">
+                    <h2 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#recipesApp" href="#searchPanelCollapse" aria-expanded="true" aria-controls="searchPanelCollapse">Search for Recipes</a>
+                    </h2>
+                </div>
+                <div id="searchPanelCollapse" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="searchPanelHeading">
+                    <div class="panel-body">
+                        <form data-bind="submit: searchRecipes">
+                            <label for="malts">Malts</label>
+                            <div class="form-group">
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2 class="panel-title">Search for Recipes</h2>
+                                <select id="malts" data-bind="options: Malts.Malt, optionsText: 'malt', optionsValue : 'id'" size="10" multiple class="form-control"></select>
+                            </div>
+                            <label for="hops">Hops</label>
+                            <div class="form-group">
+
+                                <select id="hops" data-bind="options: Hops.Hop, optionsText: 'hops', optionsValue : 'id'" size="10" multiple class="form-control"></select>
+                            </div>
+                            <label for="yeast">Yeast</label>
+                            <div class="form-group">
+                                <select id="yeast" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple class="form-control"></select>
+                            </div>
+                            <div class="form-group">
+                                <input id="abvmin" type="text" class="form-control" data-bind="value: abvSlider.min"/>
+                                <div id="abvSlider" data-bind="rangeSlider: {minValue: abvSlider.min, maxValue: abvSlider.max, minSlider: 0, maxSlider:50, decimal: 1, step:0.1, suffix: '%'}"></div>
+                                <input id="abvmax" type="text" class="form-control" data-bind="value: abvSlider.max"/>
+                            </div>
+                            <div class="form-group">
+                                <input id="abvmin" type="text" class="form-control" data-bind="value: ibuSlider.min" />
+                                <div id="abvSlider" data-bind="rangeSlider: {minValue: ibuSlider.min, maxValue: ibuSlider.max, minSlider: 0, maxSlider:441, decimal: 0, step:1, suffix: ''}"></div>
+                                <input id="abvmax" type="text" class="form-control" data-bind="value: ibuSlider.max" />
+                            </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="panel-body">
-                <form data-bind="submit: searchRecipes">
-                    <label for="malts">Malts</label>
-                    <div class="form-group">
-                        
-                        <select id="malts" data-bind="options: Malts.Malt, optionsText: 'malt', optionsValue : 'id'" size="10" multiple="true"></select>
-                    </div>
-                    <label for="hops">Hops</label>
-                    <div class="form-group">
-                       
-                        <select id="hops" data-bind="options: Hops.Hop, optionsText: 'hops', optionsValue : 'id'" size="10" multiple="true"></select>
-                    </div>
-                    <label for="yeast">Yeast</label>
-                    <div class="form-group">
-                        <select id="yeast" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple="true"></select>
-                    </div>
 
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="resultsPanelHeading">
+                    <h2 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#recipesApp" href="#resultsPanelCollapse" aria-expanded="false" aria-controls="resultsPanelCollapse">Recipe Results</a>
+                    </h2>
+                </div>
+                <div id="resultsPanelCollapse" class="panel-collapse collapse" role="tabpanel" aria-labelledby="resultsPanelHeading">
+                    <div class="panel-body">
+                        <div class="col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h2 class="panel-title">Recipes</h2>
+                                </div>
+                                <div class="panel-body">
+                                    <ul class="list-unstyled" data-bind="foreach: Recipes.Recipe">
+                                        <li>
+                                            <strong><span data-bind="text: name"></span></strong>: <span data-bind="text: abv"></span>%
+                                            <small><a href="#" data-bind="click: $parent.Recipes.getRecipeDetail">Details</a></small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div> 
 
+                        <!-- ko if:Recipes.detail() -->
+                        <div class="col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h2 class="panel-title">Detail</h2>
+                                </div>
+                                <table class="table">
+                                    <tr><td>source2</td><td data-bind="text: Recipes.detail().source2"></td></tr>
+                                    <tr><td>number</td><td data-bind="text: Recipes.detail().number"></td></tr>
+                                    <tr><td>name</td><td data-bind="text: Recipes.detail().name"></td></tr>
+                                    <tr><td>yeastName</td><td data-bind="text: Recipes.detail().yeastName"></td></tr>
+                                    <tr><td>abv</td><td data-bind="text: Recipes.detail().abv"></td></tr>
+                                    <tr><td>ibu</td><td data-bind="text: Recipes.detail().ibu"></td></tr>
+                                    <tr><td>og</td><td data-bind="text: Recipes.detail().og"></td></tr>
+                                    <tr><td>fg</td><td data-bind="text: Recipes.detail().fg"></td></tr>
+                                    <tr><td>ebc</td><td data-bind="text: Recipes.detail().ebc"></td></tr>
+                                    <tr><td>hasAdjucts</td><td data-bind="text: Recipes.detail().hasAdjucts"></td></tr>
+                                    <tr><td>mashTemp</td><td data-bind="text: Recipes.detail().mashTemp"></td></tr>
+                                    <tr><td>mashTime</td><td data-bind="text: Recipes.detail().mashTime"></td></tr>
+                                    <tr><td>fermentation</td><td data-bind="text: Recipes.detail().fermentation"></td></tr>
+                                </table>
+                            </div>
+                        </div>
+                        <!-- /ko -->
+                     </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row" id="recipes">
+@*<div class="row" id="recipes">*@
     <!--comment-->
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2 class="panel-title">Recipes</h2>
-            </div>
-            <div class="panel-body">
-                <ul class="list-unstyled" data-bind="foreach: Recipes.Recipe">
-                    <li>
-                        <strong><span data-bind="text: name"></span></strong>: <span data-bind="text: abv"></span>%
-                        <small><a href="#" data-bind="click: $parent.Recipes.getRecipeDetail">Details</a></small>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>
-    </div>
+    
+        
+    @*</div>*@
 
-    <!-- ko if:Recipes.detail() -->
+    @*<!-- ko if:Recipes.detail() -->
 
     <div class="col-md-4">
         <div class="panel panel-default">
@@ -82,7 +135,7 @@
         </div>
     </div>
 
-    <!-- /ko -->
+    <!-- /ko -->*@
 
     <div class="col-md-4">
         <!-- TODO: Add new book -->
