--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -21,29 +21,97 @@
                         <form data-bind="submit: searchRecipes">
                             <label for="malts">Malts</label>
                             <div class="form-group">
-
                                 <select id="malts" data-bind="options: Malts.Malt, optionsText: 'malt', optionsValue : 'id'" size="10" multiple class="form-control"></select>
                             </div>
+
                             <label for="hops">Hops</label>
                             <div class="form-group">
-
                                 <select id="hops" data-bind="options: Hops.Hop, optionsText: 'hops', optionsValue : 'id'" size="10" multiple class="form-control"></select>
                             </div>
+
                             <label for="yeast">Yeast</label>
                             <div class="form-group">
                                 <select id="yeast" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id'" size="10" multiple class="form-control"></select>
                             </div>
+
+                            <label for="abvmin">ABV <span class="sr-only">Minimum</span></label>
+                            <label for="abvmax" class="sr-only">ABV Maximum</label>
                             <div class="form-group">
-                                <input id="abvmin" type="text" class="form-control" data-bind="value: abvSlider.min"/>
-                                <div id="abvSlider" data-bind="rangeSlider: {minValue: abvSlider.min, maxValue: abvSlider.max, minSlider: 0, maxSlider:50, decimal: 1, step:0.1, suffix: '%'}"></div>
-                                <input id="abvmax" type="text" class="form-control" data-bind="value: abvSlider.max"/>
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <input id="abvmin" type="text" class="form-control" data-bind="value: abvSlider.min" />
+                                    </div>
+                                    <div class="col-xs-8 slider-cont">
+                                        <div id="abvSlider" data-bind="rangeSlider: {minValue: abvSlider.min, maxValue: abvSlider.max, minSlider: 0, maxSlider:20, decimal: 1, step:0.1, suffix: '%', pipDensity: 5, pipValues: [0,25, 50,75,100], pipMode: 'positions'}"></div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <input id="abvmax" type="text" class="form-control" data-bind="value: abvSlider.max" />
+                                    </div>
+                                </div>
                             </div>
+
+                            <label for="ibumin">IBU <span class="sr-only">Minimum</span></label>
+                            <label for="ibumax" class="sr-only">IBU Maximum</label>
                             <div class="form-group">
-                                <input id="abvmin" type="text" class="form-control" data-bind="value: ibuSlider.min" />
-                                <div id="abvSlider" data-bind="rangeSlider: {minValue: ibuSlider.min, maxValue: ibuSlider.max, minSlider: 0, maxSlider:441, decimal: 0, step:1, suffix: ''}"></div>
-                                <input id="abvmax" type="text" class="form-control" data-bind="value: ibuSlider.max" />
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <input id="ibumin" type="text" class="form-control" data-bind="value: ibuSlider.min" />
+                                    </div>
+                                    <div class="col-xs-8 slider-cont">
+                                        <div id="ibuSlider" data-bind="rangeSlider: {minValue: ibuSlider.min, maxValue: ibuSlider.max, minSlider: 0, maxSlider:440, decimal: 0, step:1, suffix: '', pipDensity: 5, pipValues: [0,100, 200,300,400, 440], pipMode: 'values'}"></div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <input id="ibumax" type="text" class="form-control" data-bind="value: ibuSlider.max" />
+                                    </div>
+                                </div>
                             </div>
-                                <button type="submit" class="btn btn-default">Submit</button>
+
+                            <label for="ebcmin">EBC <span class="sr-only">Minimum</span></label>
+                            <label for="ebcmax" class="sr-only">EBC Maximum</label>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <input id="ebcmin" type="text" class="form-control" data-bind="value: ebcSlider.min" />
+                                    </div>
+                                    <div class="col-xs-8 slider-cont">
+                                        <div id="ebcSlider" data-bind="rangeSlider: {minValue: ebcSlider.min, maxValue: ebcSlider.max, minSlider: 0, maxSlider:500, decimal: 0, step:1, suffix: '', pipDensity: 4, pipValues: [0,100, 200,300,400, 500], pipMode: 'values'}"></div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <input id="ebcmax" type="text" class="form-control" data-bind="value: ebcSlider.max" />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <label for="fermentmin">Fermenation Temprature <span class="sr-only">Minimum</span></label>
+                            <label for="fermentmax" class="sr-only">Fermenation Temprature Maximum</label>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <input id="fermentmin" type="text" class="form-control" data-bind="value: fermentSlider.min" />
+                                    </div>
+                                    <div class="col-xs-8 slider-cont">
+                                        <div id="fermentSlider" data-bind="rangeSlider: {minValue: fermentSlider.min, maxValue: fermentSlider.max, minSlider: 0, maxSlider:30, decimal: 0, step:1, suffix: 'C', pipDensity: 3.5, pipValues: [0,10,20,30], pipMode: 'values'}"></div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <input id="fermentmax" type="text" class="form-control" data-bind="value: fermentSlider.max" />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p class="form-control-static"><strong>Has Adjuncts</strong></p>
+                            <div class="form-group">
+                                <label class="radio-inline">
+                                    <input type="radio" name="hasAdjuncts" id="hasAdjuncts1" value="" checked> Both
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="hasAdjuncts" id="hasAdjuncts2" value="N"> No
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="hasAdjuncts" id="hasAdjuncts3" value="Y"> Yes
+                                </label>
+                            </div>
+
+                            <button type="submit" class="btn btn-default">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -80,19 +148,30 @@
                                     <h2 class="panel-title">Detail</h2>
                                 </div>
                                 <table class="table">
-                                    <tr><td>source2</td><td data-bind="text: Recipes.detail().source2"></td></tr>
-                                    <tr><td>number</td><td data-bind="text: Recipes.detail().number"></td></tr>
-                                    <tr><td>name</td><td data-bind="text: Recipes.detail().name"></td></tr>
-                                    <tr><td>yeastName</td><td data-bind="text: Recipes.detail().yeastName"></td></tr>
-                                    <tr><td>abv</td><td data-bind="text: Recipes.detail().abv"></td></tr>
-                                    <tr><td>ibu</td><td data-bind="text: Recipes.detail().ibu"></td></tr>
-                                    <tr><td>og</td><td data-bind="text: Recipes.detail().og"></td></tr>
-                                    <tr><td>fg</td><td data-bind="text: Recipes.detail().fg"></td></tr>
-                                    <tr><td>ebc</td><td data-bind="text: Recipes.detail().ebc"></td></tr>
-                                    <tr><td>hasAdjucts</td><td data-bind="text: Recipes.detail().hasAdjucts"></td></tr>
-                                    <tr><td>mashTemp</td><td data-bind="text: Recipes.detail().mashTemp"></td></tr>
-                                    <tr><td>mashTime</td><td data-bind="text: Recipes.detail().mashTime"></td></tr>
-                                    <tr><td>fermentation</td><td data-bind="text: Recipes.detail().fermentation"></td></tr>
+                                    <tr><td>source2</td><td data-bind="text: Recipes.detail()[0].source2"></td></tr>
+                                    <tr><td>number</td><td data-bind="text: Recipes.detail()[0].number"></td></tr>
+                                    <tr><td>name</td><td data-bind="text: Recipes.detail()[0].name"></td></tr>
+                                    <tr><td>yeastName</td><td data-bind="text: Recipes.detail()[0].yeastName"></td></tr>
+                                    <tr><td>abv</td><td data-bind="text: Recipes.detail()[0].abv"></td></tr>
+                                    <tr><td>ibu</td><td data-bind="text: Recipes.detail()[0].ibu"></td></tr>
+                                    <tr><td>og</td><td data-bind="text: Recipes.detail()[0].og"></td></tr>
+                                    <tr><td>fg</td><td data-bind="text: Recipes.detail()[0].fg"></td></tr>
+                                    <tr><td>ebc</td><td data-bind="text: Recipes.detail()[0].ebc"></td></tr>
+                                    <tr><td>hasAdjucts</td><td data-bind="text: Recipes.detail()[0].hasAdjucts"></td></tr>
+                                    <tr><td>mashTemp</td><td data-bind="text: Recipes.detail()[0].mashTemp"></td></tr>
+                                    <tr><td>mashTime</td><td data-bind="text: Recipes.detail()[0].mashTime"></td></tr>
+                                    <tr><td>fermentation</td><td data-bind="text: Recipes.detail()[0].fermentation"></td></tr>
+                                    <tr><td>Malts</td><td>
+                                                          <!-- ko foreach: Recipes.detail()[0].recipe_Malts -->
+                                                          <p><span data-bind="text: maltGenericName"></span>: <span data-bind="text: weight"></span>kg</p>
+                                                          <!-- /ko -->
+                                        </td></tr>
+                                    <tr><td>Hops</td><td>
+                                                         <!-- ko foreach: Recipes.detail()[0].recipe_Hops -->
+                                                         <p><span data-bind="text: hopName"></span>: <span data-bind="text: weight"></span>g - <span data-bind="text: stepName"></span></p>
+                                                         <!-- /ko -->
+                                        </td></tr>
+
                                 </table>
                             </div>
                         </div>
