--- a/Beer/Content/Site.css
+++ b/Beer/Content/Site.css
@@ -9,14 +9,10 @@
     padding-right: 15px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
 
 .slider-cont{
     padding-top:10px;
     padding-bottom:50px;
 }
+
+.noMatch { background-color: red;}
