--- a/Beer/Content/Site.css
+++ b/Beer/Content/Site.css
@@ -88,6 +88,17 @@
     .slidein .slidein-child {
     }
 
+.table > tbody > tr > td.nested {
+    padding: 0;
+}
+
+.table-nested {
+    margin-bottom:0;
+}
+table.table-nested:first-child tr:first-child td:first-child {
+    border-top:0px;
+}
+
 @media screen and (max-width: 767px) {
     .slidein .slidein-child {
         position: absolute;
